--- a/Yamba/res/menu/status.xml
+++ b/Yamba/res/menu/status.xml
@@ -5,5 +5,7 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/titlePrefs" android:icon="@android:drawable/ic_menu_preferences"/>
+    <item android:id="@+id/itemServiceStart" android:title="@string/titleServiceStart" android:icon="@android:drawable/ic_media_play"></item>
+    <item android:id="@+id/itemServiceStop" android:title="@string/titleServiceStop" android:icon="@android:drawable/ic_media_pause"></item>
 
 </menu>
